--- a/grails3.2.7/build.gradle
+++ b/grails3.2.7/build.gradle
@@ -32,6 +32,10 @@ dependencyManagement {
     applyMavenExclusions false
 }
 
+configurations.all {
+    exclude module:'grails-datastore-simple'
+}
+
 dependencies {
     compile "org.springframework.boot:spring-boot-starter-logging"
     compile "org.springframework.boot:spring-boot-autoconfigure"
@@ -42,7 +46,7 @@ dependencies {
     compile "org.grails:grails-web-boot"
     compile "org.grails.plugins:cache"
     compile "org.grails.plugins:scaffolding"
-    compile "org.grails.plugins:hibernate5"
+    compile "org.grails.plugins:hibernate5:${gormVersion}"
     compile "org.hibernate:hibernate-core:5.1.2.Final"
     compile "org.hibernate:hibernate-ehcache:5.1.2.Final"
     console "org.grails:grails-console"
